--- a/Dotnet/ENV/ENV.csproj
+++ b/Dotnet/ENV/ENV.csproj
@@ -690,6 +690,9 @@
       <SubType>Designer</SubType>
       <DependentUpon>PrintDocumentPrintJob.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Grid.resx">
+      <DependentUpon>Grid.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Utilities\SqlQuery.resx">
       <SubType>Designer</SubType>
       <DependentUpon>SqlQuery.cs</DependentUpon>
