--- a/Dotnet/Northwind/Northwind.ini
+++ b/Dotnet/Northwind/Northwind.ini
@@ -177,7 +177,7 @@ NoAS400SrvrSort, , Memory
 SQL = DBMS, 21, test2, , (local)\sqlexpress, , , , NoMagicRecordLock, +
 DontChangeFileInToolkit, CheckDefinition, NoCheckKey, NoFileLocks, , , +
 NoCheckExist, 0, , NoAS400SrvrSort,
-Northwind = DBMS, 21, Northwind, , server, , userName, password, NoMagicRecordLock, +
+Northwind = DBMS, 21, Northwind, , LAPTOP-03DBL67G\LSQL, , testsql, 0534177399, NoMagicRecordLock, +
 ChangeFileInToolkit, CheckDefinition, NoCheckKey, NoFileLocks, , , +
 NoCheckExist, 0, , NoAS400SrvrSort,
 
