--- a/Dotnet/NorthwindBase/NorthwindBase.csproj
+++ b/Dotnet/NorthwindBase/NorthwindBase.csproj
@@ -619,6 +619,13 @@
     <Compile Include="Shared\Theme\Fonts\Header1Italic.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Views\Controls\Test\Test.cs" />
+    <Compile Include="Views\Controls\Test\Views\Test.View.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Controls\Test\Views\Test.View.Designer.cs">
+      <DependentUpon>Test.View.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\DefaultContextMenu.cs" />
     <Compile Include="Shared\Theme\Fonts\Reserved_6.cs">
       <SubType>Component</SubType>
@@ -1027,6 +1034,10 @@
       <SubType>Designer</SubType>
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Controls\Test\Views\Test.View.resx">
+      <DependentUpon>Test.View.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
